# dbconnector

./: CMakeLists.txt  build.bat  conanfile.txt  readme.md
db/: dump-customer-202302071102.sql
dbconnector/: CMakeLists.txt  dbconnector.cpp  dbconnector.h
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  bottle.py  conan-script.py  conan_build_info-script.py  conan_server-script.py
